--- a/config/database.yml
+++ b/config/database.yml
@@ -59,6 +59,8 @@ test:
 #
 production:
   <<: *default
-  database: mangosteen_1_production
-  username: mangosteen_1
-  password: <%= ENV["MANGOSTEEN_1_DATABASE_PASSWORD"] %>
+  database: mangosteen_production
+  username: mangosteen
+  # 密码和数据库ip需要通过环境变量传入
+  password: <%= ENV["DB_PASSWORD"] %>
+  host: <%= ENV["DB_HOST"] %>
